recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:2: error: illegal start of simple expression
  if(){
     ^Spiral:10: error: ')' expected but '}' found.
} 
^