recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  if(){
    
  }
  else{
    avance(length)
    gauche(angle)
    spiral(steps-1,angle,length+3,increment)
  }
}